--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
+  "homepage": "https://n-rakesh23.github.io/3dportfolio",
   "name": "3d-portfolio",
   "version": "1.0.0",
   "private": true,
   "dependencies": {
+    "@react-three/drei": "^9.56.7",
+    "@react-three/fiber": "^8.13.0",
+    "gsap": "^3.12.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "@react-three/fiber": "^8.13.0",
-    "@react-three/drei": "^9.56.7",
-    "gsap": "^3.12.5"
+    "react-scripts": "^5.0.1"
   },
   "devDependencies": {
     "gh-pages": "^6.0.0"
